# MIDI2Score

./: .gitignore  README.md  exp.md  main.py  pretrain.py  program.md  pyproject.toml  run_experiment.py  run_pretrain.py  train.py
analysis/: length_bucketing_analysis.ipynb  train_data_analysis.ipynb  train_data_analysis.py
best_models/: README.md
best_models/rd/: config.yaml
configs/: autoresearch_active.yaml  baseline.yaml  lb_off.yaml  lb_on.yaml  pretrain.yaml  pretrain_baseline.yaml  pretrain_full_baseline.yaml  pretrain_full_best.yaml  pretrain_rd_best.yaml  pretrain_rd_maxlen512.yaml
docs/: data_preprocessing.md  decoder_pretrain.md  decoder_pretrain_exp.md  decoder_pretrain_full.md  decoder_pretrain_full_exp.md  decoder_pretrain_rd.md  decoder_pretrain_rd_exp.md  dev.md  length_bucketing.md  pretrain.md  rope.md
midi2score/: __init__.py  bar_aware_chunk.py  config.py  data.py  model.py  train.py
midi2score/data/: __init__.py  config.py  fake_dataset.py  language_model_dataset.py
midi2score/models/: __init__.py  config.py  decoder_config.py  decoder_lm.py  decoder_lm_block_attention.py  decoder_lm_common.py  decoder_lm_factory.py  decoder_lm_landmark_attention.py  (+3 more)
pretrain/: __init__.py  bar_aware_chunk.py  config.py  data.py  decoder.py  evaluate.py  trainer.py
scripts/: convert_decoder_checkpoint.py  monitor_sampler_doc_sync.py  plot_decoder_pretrain_loss.py  run_followup_7200.py  run_sampler_research.py  update_length_bucketing_doc.py
tests/: test_bar_aware_chunk.py  test_config.py  test_decoder_pretraining.py  test_experiment_runner.py  test_fake_dataset.py  test_pretrain_script.py  test_project_config.py  test_train_loop.py  test_train_script.py  test_transformer.py  text_config.py
(+12 files in other folders)
