[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "midi2score"
version = "0.1.0"
description = "Minimal training framework for MIDI-to-Score sequence-to-sequence models."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy>=2.3,<3.0",
    "pyyaml>=6.0.3,<7.0",
    "torch>=2.7,<2.8",
    "tqdm>=4.67.1,<5.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.0,<8.0",
    "mypy>=1.18,<2.0",
    "pytest>=8.3,<9.0",
    "ruff>=0.11,<0.16",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
packages = ["midi2score"]
