[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "pretrain"
version = "0.1.0"
description = "Minimal training framework for MIDI-to-Score sequence-to-sequence models."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "datasets>=4.1,<5.0",
    "ipywidgets>=8.1.8",
    "jupyterlab-widgets>=3.0.16",
    "linearized-musicxml>=1.0.0",
    "matplotlib>=3.10,<4.0",
    "numpy>=2.3,<3.0",
    "pyyaml>=6.0.3,<7.0",
    "setuptools>=80,<81",
    "tensorboard>=2.19,<3.0",
    "tokenizers>=0.22.2",
    "torch>=2.7,<2.8",
    "tqdm>=4.67.1,<5.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.0,<8.0",
    "mypy>=1.18,<2.0",
    "pytest>=8.3,<9.0",
    "ruff>=0.11,<0.16",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
packages = ["pretrain"]
